# clientele.rs

./: CHANGES.md  CREDITS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
lib/clientele/: Cargo.toml
lib/clientele/examples/skeleton/: main.rs
lib/clientele/src/: args.rs  envs.rs  feature.rs  lib.rs  options.rs  paths.rs  prelude.rs  sysexits.rs
