# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/*"]
resolver = "2"

[workspace.package]
version = "0.1.4"
authors = ["Arto Bendiken"]
edition = "2021"
rust-version = "1.70"
description = "Clientele.rs"
#documentation = "https://docs.rs/clientele/"
readme = true
homepage = "https://clientele.rs"
repository = "https://github.com/artob/clientele.rs"
license = "Unlicense"
keywords = ["cli"]
categories = ["command-line-interface", "no-std"]
publish = true

[workspace.dependencies]
clientele = { path = "lib/clientele" }

[patch.crates-io]
clientele = { path = "lib/clientele" }
