[package]
name = "clientele"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["std", "tracing"]
error-stack = ["dep:error-stack"]
std = ["error-stack?/std", "tracing?/std"]
tracing = ["dep:tracing"]

[dependencies]
argfile = { version = "0.2", default-features = false }
dotenvy = { version = "0.15", default-features = false }
error-stack = { version = "0.5", default-features = false, optional = true }
rustversion = "1.0"
tracing = { version = "0.1", default-features = false, optional = true }
wild = { version = "2", default-features = false }
