[package]
name = "clientele"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["argfile", "clap", "dirs", "dotenv", "tracing", "wild"]
argfile = ["dep:argfile"]
clap = ["dep:clap"]
dirs = ["dep:dirs"]
dotenv = ["dep:dotenvy"]
error-stack = ["dep:error-stack"]
std = ["clap?/std", "error-stack?/std", "tracing?/std"]
tracing = ["dep:tracing"]
wild = ["dep:wild"]

[dependencies]
argfile = { version = "0.2", default-features = false, optional = true }
clap = { version = "4.5", default-features = false, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "suggestions",
    "unicode",
    "usage",
    "wrap_help",
], optional = true }
dirs = { version = "5.0", default-features = false, optional = true }
dotenvy = { version = "0.15", default-features = false, optional = true }
error-stack = { version = "0.5", default-features = false, optional = true }
rustversion = "1.0"
tracing = { version = "0.1", default-features = false, optional = true }
wild = { version = "2", default-features = false, optional = true }
