[package]
name = "clientele"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = [
    "argfile",
    "camino",
    "clap",
    "color",
    "dirs",
    "dotenv",
    "parse",
    "serde",
    "tracing",
    "unicode",
    "wild",
]
argfile = ["dep:argfile"]
camino = ["dep:camino"]
clap = ["dep:clap"]
color = ["clap?/color"]
dirs = ["dep:dirs"]
dotenv = ["dep:dotenvy"]
error-stack = ["dep:error-stack"]
parse = ["parse-byteunit", "parse-datetime", "parse-duration"]
parse-byteunit = ["dep:ubyte"]
parse-datetime = []
parse-duration = ["dep:duration-str"]
serde = ["camino?/serde1"]
std = ["clap?/std", "dogma/std", "error-stack?/std", "tracing?/std"]
tracing = ["dep:tracing"]
unicode = ["clap?/unicode"]
unstable = ["dogma/unstable"]
wild = ["dep:wild"]

[dependencies]
argfile = { version = "0.2", default-features = false, optional = true }
camino = { version = "1.1", default-features = false, optional = true }
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "suggestions",
    "usage",
    "wrap_help",
], optional = true }
dirs = { version = "5.0", default-features = false, optional = true }
dogma = { version = "0.1", default-features = false }
duration-str = { version = "0.11", default-features = false, optional = true }
dotenvy = { version = "0.15", default-features = false, optional = true }
error-stack = { version = "0.5", default-features = false, optional = true }
rustversion = "1.0"
tracing = { version = "0.1", default-features = false, optional = true }
ubyte = { version = "0.10", default-features = false, optional = true }
wild = { version = "2", default-features = false, optional = true }
